--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -58,6 +58,7 @@ body {
   --diagram-stroke-color: darken(@text-color, 10%);
   --link-color: darken(@approve-color, 5%);
   --lease-product-display: darken(@text-color, 2%);
+  --always-dark-text-color: @dark-text-color;
 }
 
 .theme-dark {
@@ -73,4 +74,5 @@ body {
   --diagram-stroke-color: lighten(@text-color-dark, 10%);
   --link-color: lighten(@tertiary-color-dark, 10%);
   --lease-product-display: lighten(@text-color-dark, 2%);
+  --always-dark-text-color: @dark-text-color;
 }
